changes to cover page

--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
         <title>Bill Sun's Portfolio</title>
 
         <div class="box">
-            <img src="pics/portrait1.jpg" alt="" class="box-img">
+            <img src="pics/portrait2.jpg" alt="" class="box-img">
             <h1>
-                Bill Yuan Hong Sun</h1>
+                Bill Sun</h1>
             <h5>
                 Machine Learning and Software Engineer</h5>
             <p>
-                Hi! I am a fourth-year <a
+                Hi! I am a recent graduate from <a
                     href="https://engsci.utoronto.ca/explore_our_program/majors/machine-intelligence/">Machine
                     Intelligence</a>
-                student @ University of Toronto. I recently completed my PEY co-op at <a
+                @ University of Toronto. I've interned and am currently working at <a
                     href="https://www.nuralogix.ai/">Nuralogix</a>
                 as a Data Science Software Developer.
                 This is a showcase of my skills, projects, and insights. Enjoy!
