--- a/overview.html
+++ b/overview.html
@@ -29,38 +29,29 @@
         <!--Main-->
         <title>About Me - Bill Sun</title>
 
-        <h1>About Me</h1><br>
+        <h1 class="titleabout">About Me</h1><br>
 
-        <p>Hello! I’m Bill, a fourth-year Engineering Science student at the University of Toronto, majoring in
+        <p>Hello! I’m Bill, a recent Engineering Science graduate from the University of Toronto, majoring in
             <a href="https://engsci.utoronto.ca/explore_our_program/majors/machine-intelligence/">
                 Machine Learning and Artificial Intelligence</a>. I am enthusiastic about using software, big data,
-            machine
-            learning,
-            and the engineering approach to solve challenging problems, and helping to improve people's lives through
-            technology.</p>
+            machine learning, and the engineering approach to solve challenging problems, and helping to improve people's lives through
+            technology.
+        </p>
 
-        <p>From May 2019 to August 2020, I completed my <a
+        <p>I am currently working at <a href="https://www.nuralogix.ai/">Nuralogix</a> as a Data Engineer. Previously, 
+            from May 2019 to August 2020, I completed my <a
                 href="https://engineeringcareers.utoronto.ca/work-experience-programs/professional-experience-year-co-op-program-pey-co-op/">professional
-                experience year (PEY)</a> co-op
-            at <a href="https://www.nuralogix.ai/">Nuralogix</a> as a Data Science Software Developer, where my work is
-            centered around developing a Python
-            API client for simple access of the <a href="https://www.deepaffex.ai/en/engine.html">DeepAffex (DFX)</a>
-            cloud
-            service. I am also doing significant work in
-            data science, such as building a Jenkins pipeline to standarize data pre-processing, and implementing
-            machine
-            learning and numerical models.
-            In addition, I am working on numerous internal software and web tools.</p>
+                experience year (PEY)</a> co-op there as a Data Science Software Developer, where my work was centered around developing a Python
+            API client for simple access of the <a href="https://www.deepaffex.ai/en/engine.html">DeepAffex (DFX)</a> cloud
+            service. I am also doing significant work in data science, such as building a Jenkins pipeline to standarize data pre-processing, and implementing
+            machine learning and numerical models. In addition, I am working on numerous internal software and web tools.</p>
 
         <p>In my spare time, I am involved in numerous <a href="clubs.html">extracurricular activities</a>. I actively
-            attend technical meetups and
-            participate in hackathons. I also like to workout, play sports, travel, photograph weather and nature, and
-            mentor
-            younger peers.</p>
+            attend technical meetups and participate in hackathons. I also like to workout, play sports, travel, photograph weather and nature, and
+            mentor younger peers.</p>
 
-        <p>I am currently open to full-time opportunities starting in <strong>summer 2021</strong> in software
-            engineering,
-            data engineering, and data science. You can reach me by
+        <p>I am currently open to any full-time opportunities from 2022 onwards in software development / engineering,
+            data science / engineering, or machine learning engineering. You can reach me by
             <a href="mailto:billyuanhong.sun@mail.utoronto.ca">email</a> or <a
                 href="https://www.linkedin.com/in/bill-yuan-hong-sun/">LinkedIn</a>.
             <br><br><br>
@@ -80,7 +71,7 @@
                 color: white;
             }
 
-            h1 {
+            .titleabout {
                 color: white;
             }
 
