--- a/overview.html
+++ b/overview.html
@@ -42,13 +42,13 @@
         text-align: center;
     }
 
-    p a {
+    body p a {
         text-decoration: none;
         color: #ffbfbf;
         padding: 0;
     }
 
-    p a:hover {
+    body p a:hover {
         text-decoration: underline;
         color: #ffbfbf;
         padding: 0;
