--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 
-<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
-<script src="styles.js"></script>
-<main-head></main-head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Bill Sun's Personal Portfolio">
+    <meta name="author" content="Bill (Yuan Hong) Sun">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="logos/b.png" sizes="32x32">
+    <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+    <script type="text/javascript" src="styles.js"></script>
+</head>
 
 <div style="padding: 0% 10% 0% 10%; margin-top:50px; min-height:425px;">
     <body background="pics/toronto1.png">
 
-        <!--Main-->
         <title>Bill Sun's Portfolio</title>
 
         <div class="box">
