--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
+<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+<script src="styles.js"></script>
 <main-head></main-head>
 
 <div style="padding: 0% 10% 0% 10%; margin-top:50px; min-height:425px;">
