--- a/capstone.html
+++ b/capstone.html
@@ -29,7 +29,8 @@
             We also decided to scrap our own data online using APIs from other social media platforms, including
             Facebook and Reddit.</p>
         
-        <p>We are working on a web portal to display real-time statistics on how our sentiment analysis model rates
+        <p>We developed a <a href="https://vaccine-sentiment-pho.herokuapp.com/dashboard/">web-based dashboard</a>
+            to display real-time statistics on how our sentiment analysis model rates
             the latest social media posts. These posts are scraped directly from the social media sites. A demo will
             be available upon completion.</p>
 
