--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
                     Intelligence</a>
                 @ University of Toronto. I've interned and am currently working at <a
                     href="https://www.nuralogix.ai/">Nuralogix</a>
-                as a Data Science Software Developer.
-                This is a showcase of my skills, projects, and insights. Enjoy!
+                as a Data Engineer. This is a showcase of my skills, projects, and insights. Enjoy!
             </p>
             <ul>
                 <li><a href="https://www.linkedin.com/in/bill-yuan-hong-sun/"><i class="fab fa-linkedin-square"
