--- a/overview.html
+++ b/overview.html
@@ -130,26 +130,38 @@
 
         <h1 class="titleabout">About Me</h1><br>
 
-        <p>Hello! I’m Bill, a recent Engineering Science graduate from the University of Toronto, majoring in
+        <p>Hello! I’m Bill, a recent <a href="https://engsci.utoronto.ca/program/what-is-engsci/">Engineering Science</a> 
+            graduate from the University of Toronto, majoring in
             <a href="https://engsci.utoronto.ca/explore_our_program/majors/machine-intelligence/">
                 Machine Learning and Artificial Intelligence</a>. I am enthusiastic about using software, big data,
-            machine learning, and the engineering approach to solve challenging problems, and helping to improve people's lives through
-            technology.
+            machine learning, and the engineering approach to solve challenging problems, and helping to 
+            improve people's lives through technology.
         </p>
 
-        <p>I am currently working at <a href="https://www.nuralogix.ai/">Nuralogix</a> as a Data Engineer. Previously, 
+        <p>I am currently working at <a href="https://www.nuralogix.ai/">Nuralogix</a> as a Data Engineer, where my main responsibility is to 
+            develop smart data pipelines for machine learning. Previously, 
             from May 2019 to August 2020, I completed my <a
                 href="https://engineeringcareers.utoronto.ca/work-experience-programs/professional-experience-year-co-op-program-pey-co-op/">professional
                 experience year (PEY)</a> co-op there as a Data Science Software Developer, where my work was centered around developing a Python
             API client for simple access of the <a href="https://www.deepaffex.ai/en/engine.html">DeepAffex (DFX)</a> cloud
-            service. I am also doing significant work in data science, such as building a Jenkins pipeline to standarize data pre-processing, and implementing
-            machine learning and numerical models. In addition, I am working on numerous internal software and web tools.</p>
+            service. I am also doing significant work in data science and data engineering, 
+            such as building a Jenkins pipeline to standarize data pre-processing, and implementing
+            machine learning and numerical models. In addition, I've worked on numerous internal software, web tools, and microservices.</p>
+
+        <p>In my senior year, I completed a <a href="capstone.html">capstone project</a> with Public Health Ontario, where my team and I developed 
+            a <a href="https://vaccine-sentiment-pho.herokuapp.com/dashboard/">web-based dashboard</a> that displays real-time statistics on 
+            the vaccine sentiment of the latest social media posts, using a sentiment analysis machine learning model. I also completed a thesis 
+            with Prof. <a href="https://www.oise.utoronto.ca/aphd/Home/Faculty_and_Staff/Faculty/4836/Kang_Lee.html">Kang Lee</a>, on the topic of
+            using machine learning approaches for shortening long assessments while maintaining performance. The paper, titled "A Novel Approach for 
+            Developing Efficient and Convenient Short Assessments to Approximate a Long Assessment", is pending publication in 
+            <a href="https://www.springer.com/journal/13428">Behavior Research Methods</a>.
+            </p>
 
         <p>In my spare time, I am involved in numerous <a href="clubs.html">extracurricular activities</a>. I actively
             attend technical meetups and participate in hackathons. I also like to workout, play sports, travel, photograph weather and nature, and
             mentor younger peers.</p>
 
-        <p>I am currently open to any full-time opportunities from 2022 onwards in software development / engineering,
+        <p>I am open to any full-time opportunities from 2022 onwards in software development / engineering,
             data science / engineering, or machine learning engineering. You can reach me by
             <a href="mailto:billyuanhong.sun@mail.utoronto.ca">email</a> or <a
                 href="https://www.linkedin.com/in/bill-yuan-hong-sun/">LinkedIn</a>.
