update thesis desc

--- a/overview.html
+++ b/overview.html
@@ -150,9 +150,10 @@
 
         <p>In my senior year, I completed a <a href="capstone.html">capstone project</a> with Public Health Ontario, where my team and I developed 
             a <a href="https://vaccine-sentiment-pho.herokuapp.com/dashboard/">web-based dashboard</a> that displays real-time statistics on 
-            the vaccine sentiment of the latest social media posts, using a sentiment analysis machine learning model. I also completed a thesis 
+            the vaccine sentiment of the latest social media posts, using a sentiment analysis machine learning model. I also completed a 
+            <a href="thesis.html">thesis</a> 
             with Prof. <a href="https://www.oise.utoronto.ca/aphd/Home/Faculty_and_Staff/Faculty/4836/Kang_Lee.html">Kang Lee</a>, on the topic of
-            using machine learning approaches for shortening long assessments while maintaining performance. The paper, titled "A Novel Approach for 
+            using machine learning approaches for shortening long assessments while maintaining its performance. The paper, titled "A Novel Approach for 
             Developing Efficient and Convenient Short Assessments to Approximate a Long Assessment", is pending publication in 
             <a href="https://www.springer.com/journal/13428">Behavior Research Methods</a>.
             </p>
