--- a/thesis.html
+++ b/thesis.html
@@ -12,8 +12,8 @@
         <!--Main-->
         <title>Undergraduate Thesis - Bill Sun</title>
 
-        <h1>Undergraduate Thesis Summary</h1>
-        <h3>Machine Learning Approaches for Rapid Assessment of Anxiety</h3>
+        <h1>Undergraduate Thesis</h1>
+        <h3>A Novel Approach for Developing Efficient and Convenient Short Assessments to Approximate a Long Assessment</h3>
         <h3>Supervisor: <a
                 href="https://www.oise.utoronto.ca/aphd/Home/Faculty_and_Staff/Faculty/4836/Kang_Lee.html">Kang Lee</a>,
             Ontario Institute for Studies in Education, University of Toronto</h3>
@@ -29,8 +29,9 @@
             on how the questions were answered. Finally, a prototype of the thesis product would be implemented as a web
             application, with a web user interface that mimic the functionality of the anxiety self-assessment tool.</p>
 
-        <p>I am hoping to publish my thesis in a medical / mental-health related journal upon completion, and have a 
-            demonstration of the proposed website available.</p>
+        <p>I am in the process of publishing my thesis paper in a journal called 
+            <a href="https://www.springer.com/journal/13428">Behavior Research Methods</a>. I am hoping that this will be
+            a significant contribution to the field of applied psychology and survey methodology.</p>
 
     </body>
 </div>
