fix linkedin icon

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 as a Data Engineer. This is a showcase of my skills, projects, and insights. Enjoy!
             </p>
             <ul>
-                <li><a href="https://www.linkedin.com/in/bill-yuan-hong-sun/"><i class="fab fa-linkedin-square"
+                <li><a href="https://www.linkedin.com/in/bill-yuan-hong-sun/"><i class="fab fa-linkedin"
                             aria-hidden="true"></i></a></li>
                 <li><a href="https://github.com/billyhsun"><i class="fab fa-github-square" aria-hidden="true"></i></a>
                 </li>
