--- a/ewb.html
+++ b/ewb.html
@@ -16,6 +16,20 @@
 		<h1>Engineers Without Borders</h1>
 		<h3>University of Toronto Chapter</h3><br>
 
+		<h2>Origins: Future Engineers Society</h2>
+		<h3>Earl Haig Secondary School</h3><br>
+
+		<p>At the start of grade 12, I noticed the lack of a focused engineering club at my high school and decided to
+			found such a club focused in inspiring future engineers, developing future engineering students, connecting
+			with engineering professionals, and organizing engineering-related events.</p>
+
+		<p>The club organized multiple engineering-related events at school, ranging from guest speakers to
+			mini-competitions to the annual engineering competition at my high school.</p>
+
+		<p>After the initial year, the club was merged with my high school's Engineers Without Borders chapter, which I
+			mentored. Together, it still carries out the same functions as the original club, but it also participates
+			in EWB sponsored events. </p>
+
 		<h2>Youth Engagement Portfolio</h2>
 		<p>During first year (2016-2017), I was a part of Engineers Without Borders, University of Toronto chapter, in
 			the Youth Engagement portfolio. </p>
