--- a/overview.html
+++ b/overview.html
@@ -91,7 +91,7 @@
         visibility: hidden;
         width: 120px;
         background-color: black;
-        color: #fff;
+        color: #FFFFFF;
         text-align: center;
         border-radius: 6px;
         padding: 5px 0;
@@ -117,6 +117,16 @@
     .tooltip:hover .tooltiptext {
         visibility: visible;
         opacity: 1;
+    }
+
+    #skillicon {
+        color:#EEEEEE; 
+        margin: 5px;
+    }
+
+    #skillicon:hover {
+        color:#FFFFFF; 
+        transition: opacity 0.1s;
     }
 </style>
 
@@ -185,7 +195,7 @@
 
             <tr>
                 <td>
-                    <div class="tooltip"><i class="fab fa-python fa-3x" style="color:#FFFFFF; margin:5px"></i>
+                    <div class="tooltip"><i class="fab fa-python fa-3x" id="skillicon"></i>
                         <span class="tooltiptext">Python</span></div>
                     <div class="container">
                         <div class="skills fluent"></div>
@@ -193,7 +203,7 @@
                 </td>
 
                 <td>
-                    <div class="tooltip"><i class="fas fa-database fa-3x" style="color:#FFFFFF; margin:5px"></i>
+                    <div class="tooltip"><i class="fas fa-database fa-3x" id="skillicon"></i>
                         <span class="tooltiptext">SQL / Databases</span></div>
                     <div class="container">
                         <div class="skills fluent"></div>
@@ -210,7 +220,7 @@
 
             <tr>
                 <td>
-                    <div class="tooltip"><i class="fab fa-java fa-3x" style="color:#FFFFFF; margin:5px"></i>
+                    <div class="tooltip"><i class="fab fa-java fa-3x" id="skillicon"></i>
                         <span class="tooltiptext">Java</span></div>
                     <div class="container">
                         <div class="skills good"></div>
@@ -218,7 +228,7 @@
                 </td>
 
                 <td>
-                    <div class="tooltip"><i class="fab fa-aws fa-3x" style="color:#FFFFFF; margin:5px"></i>
+                    <div class="tooltip"><i class="fab fa-aws fa-3x" id="skillicon"></i>
                         <span class="tooltiptext">Amazon Web Services</span></div>
                     <div class="container">
                         <div class="skills good"></div>
@@ -269,7 +279,7 @@
                 </td>
 
                 <td>
-                    <div class="tooltip"><i class="fab fa-linux fa-3x" style="color:#FFFFFF; margin:5px"></i>
+                    <div class="tooltip"><i class="fab fa-linux fa-3x" id="skillicon"></i>
                         <span class="tooltiptext">Linux</span></div>
                     <div class="container">
                         <div class="skills good"></div>
@@ -286,7 +296,7 @@
 
             <tr>
                 <td>
-                    <div class="tooltip"><i class="fab fa-node-js fa-3x" style="color:#FFFFFF; margin:5px"></i>
+                    <div class="tooltip"><i class="fab fa-node-js fa-3x" id="skillicon"></i>
                         <span class="tooltiptext">Node.js</span></div>
                     <div class="container">
                         <div class="skills familiar"></div>
@@ -294,7 +304,7 @@
                 </td>
 
                 <td>
-                    <div class="tooltip"><i class="fab fa-react fa-3x" style="color:#FFFFFF; margin:5px"></i>
+                    <div class="tooltip"><i class="fab fa-react fa-3x" id="skillicon"></i>
                         <span class="tooltiptext">React.js</span></div>
                     <div class="container">
                         <div class="skills good"></div>
@@ -311,7 +321,7 @@
 
             <tr>
                 <td>
-                    <div class="tooltip"><i class="fab fa-js-square fa-3x" style="color:#FFFFFF; margin:5px"></i>
+                    <div class="tooltip"><i class="fab fa-js-square fa-3x" id="skillicon"></i>
                         <span class="tooltiptext">JavaScript</span></div>
                     <div class="container">
                         <div class="skills familiar"></div>
@@ -336,7 +346,7 @@
 
             <tr>
                 <td>
-                    <div class="tooltip"><i class="fab fa-html5 fa-3x" style="color:#FFFFFF; margin:5px"></i>
+                    <div class="tooltip"><i class="fab fa-html5 fa-3x" id="skillicon"></i>
                         <span class="tooltiptext">HTML</span></div>
                     <div class="container">
                         <div class="skills good"></div>
@@ -362,7 +372,7 @@
 
             <tr>
                 <td>
-                    <div class="tooltip"><i class="fab fa-css3 fa-3x" style="color:#FFFFFF; margin:5px"></i>
+                    <div class="tooltip"><i class="fab fa-css3 fa-3x" id="skillicon"></i>
                         <span class="tooltiptext">CSS</span></div>
                     <div class="container">
                         <div class="skills good"></div>
