--- a/overview.html
+++ b/overview.html
@@ -220,8 +220,8 @@
 
             <tr>
                 <td>
-                    <div class="tooltip"><i class="fab fa-java fa-3x" id="skillicon"></i>
-                        <span class="tooltiptext">Java</span></div>
+                    <div class="tooltip"><i><img src="logos/cpp.png" alt="Python" width=42 style="margin:5px"></i>
+                        <span class="tooltiptext">C++</span></div>
                     <div class="container">
                         <div class="skills good"></div>
                     </div>
@@ -271,8 +271,8 @@
 
             <tr>
                 <td>
-                    <div class="tooltip"><i><img src="logos/cpp.png" alt="Python" width=42 style="margin:5px"></i>
-                        <span class="tooltiptext">C++</span></div>
+                    <div class="tooltip"><i class="fab fa-java fa-3x" id="skillicon"></i>
+                        <span class="tooltiptext">Java</span></div>
                     <div class="container">
                         <div class="skills familiar"></div>
                     </div>
@@ -280,7 +280,7 @@
 
                 <td>
                     <div class="tooltip"><i class="fab fa-linux fa-3x" id="skillicon"></i>
-                        <span class="tooltiptext">Linux</span></div>
+                        <span class="tooltiptext">Linux / Ubuntu</span></div>
                     <div class="container">
                         <div class="skills good"></div>
                     </div>
@@ -296,18 +296,18 @@
 
             <tr>
                 <td>
-                    <div class="tooltip"><i class="fab fa-node-js fa-3x" id="skillicon"></i>
-                        <span class="tooltiptext">Node.js</span></div>
+                    <div class="tooltip"><i class="fab fa-html5 fa-3x" id="skillicon"></i>
+                        <span class="tooltiptext">HTML</span></div>
                     <div class="container">
-                        <div class="skills familiar"></div>
+                        <div class="skills good"></div>
                     </div>
                 </td>
 
                 <td>
-                    <div class="tooltip"><i class="fab fa-react fa-3x" id="skillicon"></i>
-                        <span class="tooltiptext">React.js</span></div>
+                    <div class="tooltip"><i class="fab fa-docker fa-3x" id="skillicon"></i>
+                        <span class="tooltiptext">Docker</span></div>
                     <div class="container">
-                        <div class="skills good"></div>
+                        <div class="skills familiar"></div>
                     </div>
                 </td>
 
@@ -315,6 +315,31 @@
                     <p><b>Event Organization</b></p>
                     <div class="container">
                         <div class="skills good"></div>
+                    </div>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <div class="tooltip"><i class="fab fa-css3 fa-3x" id="skillicon"></i>
+                        <span class="tooltiptext">CSS</span></div>
+                    <div class="container">
+                        <div class="skills good"></div>
+                    </div>
+                </td>
+
+                <td>
+                    <div class="tooltip"><i class="fab fa-atlassian fa-3x" id="skillicon"></i>
+                        <span class="tooltiptext">Atlassian toolkit</span></div>
+                    <div class="container">
+                        <div class="skills good"></div>
+                    </div>
+                </td>
+
+                <td>
+                    <p><b>Teamwork</b></p>
+                    <div class="container">
+                        <div class="skills fluent"></div>
                     </div>
                 </td>
             </tr>
@@ -337,59 +362,7 @@
                 </td>
 
                 <td>
-                    <p><b>Teamwork</b></p>
-                    <div class="container">
-                        <div class="skills fluent"></div>
-                    </div>
-                </td>
-            </tr>
-
-            <tr>
-                <td>
-                    <div class="tooltip"><i class="fab fa-html5 fa-3x" id="skillicon"></i>
-                        <span class="tooltiptext">HTML</span></div>
-                    <div class="container">
-                        <div class="skills good"></div>
-                    </div>
-                </td>
-
-                <td>
-                    <div class="tooltip"><i><img src="logos/tensorflow.png" alt="Python" width=45
-                                style="margin:0px 5px"></i>
-                        <span class="tooltiptext">Tensorflow</span></div>
-                    <div class="container">
-                        <div class="skills good"></div>
-                    </div>
-                </td>
-
-                <td>
                     <p><b>Project Management</b></p>
-                    <div class="container">
-                        <div class="skills good"></div>
-                    </div>
-                </td>
-            </tr>
-
-            <tr>
-                <td>
-                    <div class="tooltip"><i class="fab fa-css3 fa-3x" id="skillicon"></i>
-                        <span class="tooltiptext">CSS</span></div>
-                    <div class="container">
-                        <div class="skills good"></div>
-                    </div>
-                </td>
-
-                <td>
-                    <div class="tooltip"><i><img src="logos/pytorch.png" alt="Python" width=45
-                                style="margin:0px 5px"></i>
-                        <span class="tooltiptext">PyTorch</span></div>
-                    <div class="container">
-                        <div class="skills fluent"></div>
-                    </div>
-                </td>
-
-                <td>
-                    <p><b>Public Speaking</b></p>
                     <div class="container">
                         <div class="skills good"></div>
                     </div>
@@ -407,11 +380,37 @@
                 </td>
 
                 <td>
-                    <div class="tooltip"><i><img src="logos/docker.png" alt="Python" width=45
+                    <div class="tooltip"><i><img src="logos/tensorflow.png" alt="Python" width=45
                                 style="margin:0px 5px"></i>
-                        <span class="tooltiptext">Docker</span></div>
+                        <span class="tooltiptext">Tensorflow</span></div>
                     <div class="container">
-                        <div class="skills familiar"></div>
+                        <div class="skills good"></div>
+                    </div>
+                </td>
+
+                <td>
+                    <p><b>Public Speaking</b></p>
+                    <div class="container">
+                        <div class="skills good"></div>
+                    </div>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <div class="tooltip"><i class="fab fa-r-project fa-3x" id="skillicon"></i>
+                        <span class="tooltiptext">R</span></div>
+                    <div class="container">
+                        <div class="skills good"></div>
+                    </div>
+                </td>
+
+                <td>
+                    <div class="tooltip"><i><img src="logos/pytorch.png" alt="Python" width=45
+                                style="margin:0px 5px"></i>
+                        <span class="tooltiptext">PyTorch</span></div>
+                    <div class="container">
+                        <div class="skills fluent"></div>
                     </div>
                 </td>
 
