Test blog style

--- a/blogs.html
+++ b/blogs.html
@@ -15,7 +15,7 @@
     body {
         font-family: Arial;
         padding: 20px;
-        background: #ccccff;
+        background: #333333;
     }
 
     /* Header/Blog Title */
@@ -24,7 +24,7 @@
         padding-bottom: 1px;
         font-size: 30px;
         text-align: center;
-        background: #ccccff;
+        background: #333333;
     }
 
     /* Create two unequal columns that floats next to each other */
@@ -43,7 +43,7 @@
 
     /* Add a card effect for articles */
     .card {
-        background-color: white;
+        background-color: #DDDDDD;
         padding: 20px;
         margin-top: 20px;
     }
@@ -54,7 +54,6 @@
         display: table;
         clear: both;
     }
-
 
     /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
     @media screen and (max-width: 800px) {
@@ -68,6 +67,7 @@
 </style>
 
 <body>
+    <title>Bill Sun's Blog</title>
 
     <div class="header">
         <h2>Bill Sun's Blog</h2>
