--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
 
         <div class="box">
             <img src="pics/portrait2.jpg" alt="" class="box-img">
-            <h1>
-                Bill Sun</h1>
-            <h5>
-                Machine Learning and Software Engineer</h5>
+            <h1>Bill Sun</h1>
+            <h5>Machine Learning and Software Engineer</h5>
             <p>
                 Hi! I am a recent graduate from <a
                     href="https://engsci.utoronto.ca/explore_our_program/majors/machine-intelligence/">Machine
