edit title colour and add medium reference

--- a/blogs.html
+++ b/blogs.html
@@ -25,6 +25,7 @@
         font-size: 30px;
         text-align: center;
         background: #333333;
+        color: #EEEEEE;
     }
 
     /* Create two unequal columns that floats next to each other */
@@ -57,7 +58,6 @@
 
     /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
     @media screen and (max-width: 800px) {
-
         .leftcolumn,
         .rightcolumn {
             width: 100%;
@@ -92,6 +92,12 @@
                 <li><a href="#20161025">Oct. 25, 2016: Design for X Walkabout - The Improved Design of iPhone 7/7+ for
                         Durability</a></li>
                 <li><a href="#20160929">Sep. 29, 2016: Praxis I Lecture Extension - Use Wikipedia for Research?</a></li>
+            </div>
+
+            <div class="card">
+                <h2>Medium Blog</h2>
+                <p>In collaboration with some engineering classmates, I have recently written a few blogs on Medium. Check it out 
+                    <a href="https://thewanderingengineer.medium.com/?source=linkShare-aebc68ada3ae-1625691948">here</a>!</p>
             </div>
         </div>
 
