--- a/blogs.html
+++ b/blogs.html
@@ -3,6 +3,7 @@
 
 <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
 <script src="styles.js"></script>
+<link rel="icon" type="image/png" href="logos/b.png" sizes="32x32">
 <main-head></main-head>
 <main-header></main-header>
 
@@ -25,7 +26,7 @@
         font-size: 30px;
         text-align: center;
         background: #333333;
-        color: #EEEEEE;
+        color: #FFFFFF;
     }
 
     /* Create two unequal columns that floats next to each other */
@@ -96,7 +97,7 @@
 
             <div class="card">
                 <h2>Medium Blog</h2>
-                <p>In collaboration with some engineering classmates, I have recently written a few blogs on Medium. Check it out 
+                <p>In collaboration with some engineering classmates, I recently started a blog on Medium. Check it out 
                     <a href="https://thewanderingengineer.medium.com/?source=linkShare-aebc68ada3ae-1625691948">here</a>!</p>
             </div>
         </div>
