--- a/aer201.html
+++ b/aer201.html
@@ -3,6 +3,7 @@
 
 <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
 <script src="styles.js"></script>
+<link rel="icon" type="image/png" href="logos/b.png" sizes="32x32">
 <main-head></main-head>
 <main-header></main-header>
 
