change background colour

--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
 					<font color="white">Mental health surveys powered by AWS Lambda and machine learning models</font>
 				</p>
 				<p>
-					<font color="white">Email: covid19@gmail.com; Password: covid19</font>
+					<font color="white">Access Code: 0000</font>
 				</p>
 			</figcaption>
 		</figure>
