--- a/pey.html
+++ b/pey.html
@@ -8,7 +8,7 @@
 <main-header></main-header>
 
 <div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:850px;">
-	<body background="pics/toronto1.png">
+	<body style="background-color: #333333; color: #FFFFFF;">
 
 		<!--Main-->
         <title>PEY Co-op - Bill Sun</title>
