change font colour

--- a/blogs.html
+++ b/blogs.html
@@ -50,6 +50,11 @@
         margin-top: 20px;
     }
 
+    .card a:hover {
+        color: #333333;
+        text-decoration: none;
+    }
+
     /* Clear floats after the columns */
     .row:after {
         content: "";
