--- a/overview.html
+++ b/overview.html
@@ -133,8 +133,7 @@
 
 
 <div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:500px;">
-
-    <body style="background-color:#333333;">
+    <body>
 
         <!--Main-->
         <title>About Me - Bill Sun</title>
