--- a/deep.html
+++ b/deep.html
@@ -8,7 +8,7 @@
 <main-header></main-header>
 
 <div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:800px;">
-	<body style="background-color: #333333; color: #FFFFFF;">
+	<body>
 
 		<!--Main-->
 		<title>DEEP Summer Academy - Bill Sun</title>
