change font colour

--- a/research.html
+++ b/research.html
@@ -8,7 +8,7 @@
 <main-header></main-header>
 
 <div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:800px;">
-	<body background="pics/transit1.jpg">
+	<body>
 
 		<!--Main-->
 		<title>Transit Research - Bill Sun</title>
