clean up content

--- a/blogs.html
+++ b/blogs.html
@@ -45,6 +45,7 @@
 
     /* Add a card effect for articles */
     .card {
+        color: #111111;
         background-color: #DDDDDD;
         padding: 20px;
         margin-top: 20px;
