--- a/clubs.html
+++ b/clubs.html
@@ -7,7 +7,7 @@
 <main-head></main-head>
 <main-header></main-header>
 
-<body background="pics/background2.jpg">
+<body background="pics/toronto1.png">
 	<div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:800px;">
 
 		<!--Main-->
