major update Dec 9 2022

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                     href="https://engsci.utoronto.ca/explore_our_program/majors/machine-intelligence/">Machine
                     Intelligence</a>
                 @ University of Toronto. I've interned and am currently working at <a
-                    href="https://www.nuralogix.ai/">Nuralogix</a>
-                as a Data Engineer. This is a showcase of my skills, projects, and insights. Enjoy!
+                    href="https://www.kinaxis.com/en">Kinaxis</a>
+                as a Machine Learning Engineer. This is a showcase of my skills, projects, and insights. Enjoy!
             </p>
             <ul>
                 <li><a href="https://www.linkedin.com/in/bill-yuan-hong-sun/"><i class="fab fa-linkedin"
