--- a/overview.html
+++ b/overview.html
@@ -178,6 +178,26 @@
                 href="https://www.linkedin.com/in/bill-yuan-hong-sun/">LinkedIn</a>.
             <br><br><br>
 
+
+        <h1 class="titleabout">All Publications</h1><br>
+
+        <h3>[1] Sun, Y.H., Luo, H. & Lee, K. (2022). A Novel Approach for Developing Efficient and Convenient Short Assessments to Approximate a Long Assessment. Behavior Research Methods. 
+            <a href="https://doi.org/10.3758/s13428-021-01771-7">https://doi.org/10.3758/s13428-021-01771-7</a>
+        </h3>
+        <h3>[2] Sun, Y.H., Liu, Q., Lee, N.Y., Li, X., & Lee, K. (2022). A novel machine learning approach to shorten depression risk assessment for convenient uses. Journal of Affective Disorders, 312, 275–291.
+            <a href="https://doi.org/10.1016/j.jad.2022.06.035">https://doi.org/10.1016/j.jad.2022.06.035</a>
+        </h3>
+        <h3>[3] Liu, S., Sun, Y.H., Waese-Perlman, A.A., Lee, N.Y., Zhang, H., Lee, K. (2022). Symptom Based Models of COVID-19 Infection Using AI. In: Lidströmer, N., Eldar, Y.C. (eds) Artificial Intelligence in Covid-19. Springer, Cham. 
+            <a href="https://doi.org/10.1007/978-3-031-08506-2_8">https://doi.org/10.1007/978-3-031-08506-2_8</a>
+        </h3>
+        <h3>[4] Zhou, W., Sun, Y.H., Huang, W., Liu, Q., Lee, N.Y., Yasin, Y., Chen, Z., Wang, J., Cai, P., Feng, Z.P. & Lee, K (In press). Risk prediction of fatty liver disease by machine learning using physical and blood biomarkers independent of liver biopsy. The Lancet Gastroenterology & Hepatology.
+        </h3>
+        <h3>[5] Yasin, Y., Sun, Y.H., & Lee, K. (2022). A machine learning approach for predicting children's future BMI. Canadian Developmental Psychology Conference 2022.
+            (<a href="files/poster-childbmi.pdf">link</a>)
+        </h3>
+        <br><br><br>
+    
+
         <h2 id="skills" style="text-align:center;">Skills Summary</h2>
 
         <table style="width:100%">
