--- a/thesis.html
+++ b/thesis.html
@@ -11,7 +11,26 @@
     <body>
 
         <!--Main-->
-        <title>Undergraduate Thesis - Bill Sun</title>
+        <title>Research Experience & Publications - Bill Sun</title>
+
+        <h1>All Publications</h1>
+
+        <h3>[1] Sun, Y.H., Luo, H. & Lee, K. (2022). A Novel Approach for Developing Efficient and Convenient Short Assessments to Approximate a Long Assessment. Behavior Research Methods. 
+            <a href="https://doi.org/10.3758/s13428-021-01771-7">https://doi.org/10.3758/s13428-021-01771-7</a>
+        </h3>
+        <h3>[2] Sun, Y.H., Liu, Q., Lee, N.Y., Li, X., & Lee, K. (2022). A novel machine learning approach to shorten depression risk assessment for convenient uses. Journal of Affective Disorders, 312, 275–291.
+            <a href="https://doi.org/10.1016/j.jad.2022.06.035">https://doi.org/10.1016/j.jad.2022.06.035</a>
+        </h3>
+        <h3>[3] Liu, S., Sun, Y.H., Waese-Perlman, A.A., Lee, N.Y., Zhang, H., Lee, K. (2022). Symptom Based Models of COVID-19 Infection Using AI. In: Lidströmer, N., Eldar, Y.C. (eds) Artificial Intelligence in Covid-19. Springer, Cham. 
+            <a href="https://doi.org/10.1007/978-3-031-08506-2_8">https://doi.org/10.1007/978-3-031-08506-2_8</a>
+        </h3>
+        <h3>[4] Zhou, W., Sun, Y.H., Huang, W., Liu, Q., Lee, N.Y., Yasin, Y., Chen, Z., Wang, J., Cai, P., Feng, Z.P. & Lee, K (In press). Risk prediction of fatty liver disease by machine learning using physical and blood biomarkers independent of liver biopsy. The Lancet Gastroenterology & Hepatology.
+        </h3>
+        <h3>[5] Yasin, Y., Sun, Y.H., & Lee, K. (2022). A machine learning approach for predicting children's future BMI. Canadian Developmental Psychology Conference 2022.
+            (<a href="files/poster-childbmi.pdf">link</a>)
+        </h3>
+        <br><br>
+
 
         <h1>Undergraduate Thesis</h1>
         <h3>A Novel Approach for Developing Efficient and Convenient Short Assessments to Approximate a Long Assessment</h3>
@@ -30,9 +49,26 @@
             on how the questions were answered. Finally, a prototype of the thesis product would be implemented as a web
             application, with a web user interface that mimic the functionality of the anxiety self-assessment tool.</p>
 
-        <p>I am in the process of publishing my thesis paper in a journal called 
-            <a href="https://www.springer.com/journal/13428">Behavior Research Methods</a>. I am hoping that this will be
-            a significant contribution to the field of applied psychology and survey methodology.</p>
+        <p>This paper has been published in the
+            <a href="https://www.springer.com/journal/13428">Behavior Research Methods</a> journal.
+        </p>
+
+
+        <h1>Masters Thesis</h1>
+        <h3>Rapid Assessment of Psychiatric Disorder Risks Using Machine Learning</h3>
+        <h3>Supervisor: <a
+                href="https://www.oise.utoronto.ca/aphd/Home/Faculty_and_Staff/Faculty/4836/Kang_Lee.html">Kang Lee</a>,
+            Ontario Institute for Studies in Education, University of Toronto</h3>
+        <h3>September 2022 — April 2023</h3>
+        <br>
+
+        <p>The Minnesota Multiphasic Personality Inventory (MMPI) is a test of personality and psychopathology with many 
+            applications (Camara et al., 2000) such as the diagnostic and treatment of mental disorders, forensic psychology, 
+            and screening in personnel selection (Butcher and Williams, 2009). It is the most widely used psychometric test in the world, 
+            and its most commonly administered version, the MMPI-2, contains 567 true/false questions (Drayton, 2009). However, 
+            completing the test is exhausting and time consuming due to the large number of questions. This makes the test difficult 
+            and inconvenient to be taken on a regular basis or to be administered on a large scale. </p>
+    
 
     </body>
 </div>
